--- a/FrontendCollaboration/WebContent/views/blogDetails.html
+++ b/FrontendCollaboration/WebContent/views/blogDetails.html
@@ -32,7 +32,7 @@ alt="Image Not Available" class="img-circle"  >
                   
                    
                   <button type="submit" class=" btn btn-success"  value="Post Comment" ng-click="addComment()">Post comment</button>
-                        <button type="reset" class=" btn btn-primary ">Cancel</button>
+                      <!--  <button  type="reset" class="btn btn-danger" >Cancel</button> -->
                         
                    </div>
                 <br>
